feat(sonar): fix SonarQube code smells