@@ -2,12 +2,10 @@ package com.epiis.apirfbvc.business;
 
 import java.time.LocalDate;
 import java.util.ArrayList;
-import java.util.Calendar;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -20,28 +18,24 @@ import com.epiis.apirfbvc.repository.RepositoryInventoryMovement;
 import com.epiis.apirfbvc.repository.RepositoryInventoryMovementDetail;
 import com.epiis.apirfbvc.repository.RepositoryLot;
 
+import lombok.RequiredArgsConstructor;
+
 @Service
+@RequiredArgsConstructor
 public class BusinessInventory {
+
     private final RepositoryInventoryMovement repositoryMovement;
     private final RepositoryInventoryMovementDetail repositoryMovementDetail;
     private final RepositoryLot repositoryLot;
 
-    public BusinessInventory(RepositoryLot repositoryLot,
-                             RepositoryInventoryMovement repositoryMovement,
-                             RepositoryInventoryMovementDetail repositoryMovementDetail) {
-        this.repositoryMovement = repositoryMovement;
-        this.repositoryMovementDetail = repositoryMovementDetail;
-        this.repositoryLot = repositoryLot;
-    }
-
     public ResponseInventoryIncome getIncomes() {
         ResponseInventoryIncome response = new ResponseInventoryIncome();
 
-        List<EntityInventoryMovement> movimientos = repositoryMovement.findByType("Entrada");
+        List<EntityInventoryMovement> movimientos = repositoryMovement.findByType(BusinessUtils.TYPE_ENTRADA);
 
         List<Map<String, Object>> items = movimientos.stream()
-            .map(this::toIncomeMap)
-            .collect(Collectors.toList());
+                .map(this::toIncomeMap)
+                .toList();
 
         response.setListMovements(items);
         response.success();
@@ -49,43 +43,41 @@ public class BusinessInventory {
     }
 
     private Map<String, Object> toIncomeMap(EntityInventoryMovement m) {
-        List<EntityInventoryMovementDetail> detalles =
-            repositoryMovementDetail.findByMovement_IdMovement(m.getIdMovement());
+        List<EntityInventoryMovementDetail> detalles = repositoryMovementDetail
+                .findByMovement_IdMovement(m.getIdMovement());
 
         List<Map<String, String>> detallesMap = detalles.stream().map(d -> {
             Map<String, String> det = new HashMap<>();
-            det.put("idDetail", d.getIdDetail());
-            det.put("productName", d.getProduct() != null ? d.getProduct().getName() : "—");
-            det.put("lotCode", d.getLot() != null ? d.getLot().getCode() : "—");
-            det.put("quantity", String.valueOf(d.getQuantity()));
-            det.put("unitCost", d.getUnitCost() != null ? d.getUnitCost().toString() : "0");
+            det.put(BusinessUtils.KEY_ID_DETAIL, d.getIdDetail());
+            det.put(BusinessUtils.KEY_PRODUCT_NAME, BusinessUtils.getProductName(d.getProduct()));
+            det.put(BusinessUtils.KEY_LOT_CODE, BusinessUtils.getLotCode(d.getLot()));
+            det.put(BusinessUtils.KEY_QUANTITY, String.valueOf(d.getQuantity()));
+            det.put(BusinessUtils.KEY_UNIT_COST, BusinessUtils.formatBigDecimal(d.getUnitCost()));
             return det;
-        }).collect(Collectors.toList());
+        }).toList();
 
         Map<String, Object> data = new HashMap<>();
-        data.put("idMovement", m.getIdMovement());
-        data.put("movementDate", m.getMovementDate().toString());
-        data.put("observation", m.getObservation() != null ? m.getObservation() : "");
-        data.put("userName", m.getUser() != null
-            ? m.getUser().getFirstName() + " " + m.getUser().getSurName()
-            : "—");
-        data.put("detalles", detallesMap);
+        data.put(BusinessUtils.KEY_ID_MOVEMENT, m.getIdMovement());
+        data.put(BusinessUtils.KEY_MOVEMENT_DATE, m.getMovementDate().toString());
+        data.put(BusinessUtils.KEY_OBSERVATION, BusinessUtils.getValueOrDefault(m.getObservation()));
+        data.put(BusinessUtils.KEY_USER_NAME, BusinessUtils.buildFullName(m.getUser()));
+        data.put(BusinessUtils.KEY_DETALLES, detallesMap);
 
         return data;
     }
-    
+
     public ResponseInventoryReport getReportMovements(String from, String to) {
         ResponseInventoryReport response = new ResponseInventoryReport();
         try {
-            Date fechaFrom = parseDate(from, false);
-            Date fechaTo = parseDate(to, true);
+            Date fechaFrom = BusinessUtils.parseDate(from, false);
+            Date fechaTo = BusinessUtils.parseDate(to, true);
 
             List<EntityInventoryMovement> movimientos = repositoryMovement.findAll().stream()
                     .filter(m -> m.getMovementDate() != null
                             && !m.getMovementDate().before(fechaFrom)
                             && !m.getMovementDate().after(fechaTo))
                     .sorted((a, b) -> a.getMovementDate().compareTo(b.getMovementDate()))
-                    .collect(Collectors.toList());
+                    .toList();
 
             int entradas = 0;
             int salidas = 0;
@@ -96,8 +88,8 @@ public class BusinessInventory {
 
             for (EntityInventoryMovement m : movimientos) {
 
-                List<EntityInventoryMovementDetail> detalles =
-                        repositoryMovementDetail.findByMovement_IdMovement(m.getIdMovement());
+                List<EntityInventoryMovementDetail> detalles = repositoryMovementDetail
+                        .findByMovement_IdMovement(m.getIdMovement());
 
                 int cantidad = detalles.stream()
                         .mapToInt(EntityInventoryMovementDetail::getQuantity)
@@ -105,71 +97,66 @@ public class BusinessInventory {
 
                 totalCantidad += cantidad;
 
-                switch (m.getType()) {
-                    case "Entrada" -> entradas++;
-                    case "Salida" -> salidas++;
-                    default -> ajustes++;
+                if (BusinessUtils.TYPE_ENTRADA.equals(m.getType())) {
+                    entradas++;
+                } else if (BusinessUtils.TYPE_SALIDA.equals(m.getType())) {
+                    salidas++;
+                } else {
+                    ajustes++;
                 }
 
                 Map<String, Object> data = new HashMap<>();
-                data.put("idMovement", m.getIdMovement());
-                data.put("movementDate", m.getMovementDate().toString());
-                data.put("type", m.getType());
-                data.put("observation", m.getObservation());
-                data.put("userName", m.getUser() != null
-                        ? m.getUser().getFirstName() + " " + m.getUser().getSurName()
-                        : "—");
-                data.put("quantity", cantidad);
+                data.put(BusinessUtils.KEY_ID_MOVEMENT, m.getIdMovement());
+                data.put(BusinessUtils.KEY_MOVEMENT_DATE, m.getMovementDate().toString());
+                data.put(BusinessUtils.KEY_TYPE, m.getType());
+                data.put(BusinessUtils.KEY_OBSERVATION, m.getObservation());
+                data.put(BusinessUtils.KEY_USER_NAME, BusinessUtils.buildFullName(m.getUser()));
+                data.put(BusinessUtils.KEY_QUANTITY, cantidad);
 
                 detalle.add(data);
             }
 
             Map<String, Object> resumen = new HashMap<>();
-            resumen.put("totalMovimientos", movimientos.size());
-            resumen.put("totalEntradas", entradas);
-            resumen.put("totalSalidas", salidas);
-            resumen.put("totalAjustes", ajustes);
-            resumen.put("cantidadMovida", totalCantidad);
+            resumen.put(BusinessUtils.KEY_TOTAL_MOVEMENTS, movimientos.size());
+            resumen.put(BusinessUtils.KEY_TOTAL_ENTRADAS, entradas);
+            resumen.put(BusinessUtils.KEY_TOTAL_SALIDAS, salidas);
+            resumen.put(BusinessUtils.KEY_TOTAL_AJUSTES, ajustes);
+            resumen.put(BusinessUtils.KEY_CANTIDAD_MOVIDA, totalCantidad);
 
             response.setResumen(resumen);
             response.setDetalle(detalle);
             response.success();
 
-        } catch (Exception e) {
-            response.listMessage.add("Error al generar reporte: " + e.getMessage());
+        } catch (RuntimeException e) {
+            handleReportException(response, e);
         }
 
         return response;
     }
 
     public ResponseInventoryReport getReportLowStock() {
-
         ResponseInventoryReport response = new ResponseInventoryReport();
 
         try {
-
             List<EntityLot> lotes = repositoryLot.findAll().stream()
                     .filter(l -> l.getProduct() != null)
                     .filter(l -> l.getCurrentStock() <= l.getProduct().getStockMinimum())
-                    .collect(Collectors.toList());
+                    .toList();
 
             List<Map<String, Object>> detalle = lotes.stream().map(l -> {
-
                 Map<String, Object> data = new HashMap<>();
-                data.put("idLot", l.getIdLot());
-                data.put("code", l.getCode());
-                data.put("productName", l.getProduct().getName());
-                data.put("currentStock", l.getCurrentStock());
-                data.put("stockMinimum", l.getProduct().getStockMinimum());
-                data.put("supplier", l.getSupplier() != null ? l.getSupplier().getName() : "—");
-
+                data.put(BusinessUtils.KEY_ID_LOT, l.getIdLot());
+                data.put(BusinessUtils.KEY_CODE, l.getCode());
+                data.put(BusinessUtils.KEY_PRODUCT_NAME, BusinessUtils.getProductName(l.getProduct()));
+                data.put(BusinessUtils.KEY_CURRENT_STOCK, l.getCurrentStock());
+                data.put(BusinessUtils.KEY_STOCK_MINIMUM, l.getProduct().getStockMinimum());
+                data.put(BusinessUtils.KEY_SUPPLIER_NAME, BusinessUtils.getSupplierName(l));
                 return data;
-
-            }).collect(Collectors.toList());
+            }).toList();
 
             Map<String, Object> resumen = new HashMap<>();
-            resumen.put("productosCriticos", detalle.size());
-            resumen.put("stockTotal", lotes.stream()
+            resumen.put(BusinessUtils.KEY_PRODUCTOS_CRITICOS, detalle.size());
+            resumen.put(BusinessUtils.KEY_STOCK_TOTAL, lotes.stream()
                     .mapToInt(EntityLot::getCurrentStock)
                     .sum());
 
@@ -177,43 +164,37 @@ public class BusinessInventory {
             response.setDetalle(detalle);
             response.success();
 
-        } catch (Exception e) {
-            response.listMessage.add("Error al generar reporte: " + e.getMessage());
+        } catch (RuntimeException e) {
+            handleReportException(response, e);
         }
 
         return response;
     }
 
     public ResponseInventoryReport getReportExpiring() {
-
         ResponseInventoryReport response = new ResponseInventoryReport();
 
         try {
-
             LocalDate hoy = LocalDate.now();
             LocalDate limite = hoy.plusDays(30);
 
             List<EntityLot> lotes = repositoryLot.findByExpirationDateBetween(hoy, limite);
 
             List<Map<String, Object>> detalle = lotes.stream().map(l -> {
-
                 Map<String, Object> data = new HashMap<>();
-
-                data.put("idLot", l.getIdLot());
-                data.put("code", l.getCode());
-                data.put("productName", l.getProduct() != null ? l.getProduct().getName() : "—");
-                data.put("expirationDate", l.getExpirationDate().toString());
-                data.put("currentStock", l.getCurrentStock());
-                data.put("supplier", l.getSupplier() != null ? l.getSupplier().getName() : "—");
-                data.put("purchasePrice", l.getPurchasePrice().toString());
-
+                data.put(BusinessUtils.KEY_ID_LOT, l.getIdLot());
+                data.put(BusinessUtils.KEY_CODE, l.getCode());
+                data.put(BusinessUtils.KEY_PRODUCT_NAME, BusinessUtils.getProductName(l.getProduct()));
+                data.put(BusinessUtils.KEY_EXPIRATION_DATE, l.getExpirationDate().toString());
+                data.put(BusinessUtils.KEY_CURRENT_STOCK, l.getCurrentStock());
+                data.put(BusinessUtils.KEY_SUPPLIER_NAME, BusinessUtils.getSupplierName(l));
+                data.put(BusinessUtils.KEY_PURCHASE_PRICE, l.getPurchasePrice().toString());
                 return data;
-
-            }).collect(Collectors.toList());
+            }).toList();
 
             Map<String, Object> resumen = new HashMap<>();
-            resumen.put("lotesPorVencer", detalle.size());
-            resumen.put("stockComprometido", lotes.stream()
+            resumen.put(BusinessUtils.KEY_LOTES_POR_VENCER, detalle.size());
+            resumen.put(BusinessUtils.KEY_STOCK_COMPROMETIDO, lotes.stream()
                     .mapToInt(EntityLot::getCurrentStock)
                     .sum());
 
@@ -221,37 +202,14 @@ public class BusinessInventory {
             response.setDetalle(detalle);
             response.success();
 
-        } catch (Exception e) {
-            response.listMessage.add("Error al generar reporte: " + e.getMessage());
+        } catch (RuntimeException e) {
+            handleReportException(response, e);
         }
 
         return response;
     }
 
-    private Date parseDate(String dateStr, boolean endOfDay) {
-
-        try {
-
-            java.text.SimpleDateFormat sdf = new java.text.SimpleDateFormat("yyyy-MM-dd");
-            Date date = sdf.parse(dateStr);
-
-            if (endOfDay) {
-
-                Calendar cal = Calendar.getInstance();
-                cal.setTime(date);
-                cal.set(Calendar.HOUR_OF_DAY, 23);
-                cal.set(Calendar.MINUTE, 59);
-                cal.set(Calendar.SECOND, 59);
-
-                return cal.getTime();
-            }
-
-            return date;
-
-        } catch (Exception e) {
-
-            return endOfDay ? new Date() : new Date(0);
-
-        }
+    private static void handleReportException(ResponseInventoryReport response, RuntimeException e) {
+        response.listMessage.add(BusinessUtils.buildReportErrorMessage(e));
     }
 }
