@@ -1,13 +1,12 @@
 package com.epiis.apirfbvc.business;
 
 import java.util.ArrayList;
-import java.util.Calendar;
+import java.util.Comparator;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -19,27 +18,23 @@ import com.epiis.apirfbvc.entity.EntityInventoryMovementDetail;
 import com.epiis.apirfbvc.repository.RepositoryInventoryMovement;
 import com.epiis.apirfbvc.repository.RepositoryInventoryMovementDetail;
 
+import lombok.RequiredArgsConstructor;
+
 @Service
+@RequiredArgsConstructor
 public class BusinessPurchase {
 
     private final RepositoryInventoryMovement repositoryMovement;
     private final RepositoryInventoryMovementDetail repositoryMovementDetail;
 
-    public BusinessPurchase(RepositoryInventoryMovement repositoryMovement,
-                            RepositoryInventoryMovementDetail repositoryMovementDetail) {
-        this.repositoryMovement = repositoryMovement;
-        this.repositoryMovementDetail = repositoryMovementDetail;
-    }
-
     public ResponsePurchaseGetAll getAll() {
         ResponsePurchaseGetAll response = new ResponsePurchaseGetAll();
 
-        List<EntityInventoryMovement> movimientos =
-            repositoryMovement.findByType("Entrada");
+        List<EntityInventoryMovement> movimientos = repositoryMovement.findByType(BusinessUtils.TYPE_ENTRADA);
 
         List<Map<String, Object>> items = movimientos.stream()
-            .map(this::toMap)
-            .collect(Collectors.toList());
+                .map(this::toMap)
+                .toList();
 
         response.setListPurchases(items);
         response.success();
@@ -47,105 +42,107 @@ public class BusinessPurchase {
     }
 
     private Map<String, Object> toMap(EntityInventoryMovement m) {
-        List<EntityInventoryMovementDetail> detalles =
-            repositoryMovementDetail.findByMovement_IdMovement(m.getIdMovement());
+        List<EntityInventoryMovementDetail> detalles = repositoryMovementDetail
+                .findByMovement_IdMovement(m.getIdMovement());
 
         int totalUnidades = detalles.stream()
-            .mapToInt(EntityInventoryMovementDetail::getQuantity)
-            .sum();
+                .mapToInt(EntityInventoryMovementDetail::getQuantity)
+                .sum();
 
         double costoTotal = detalles.stream()
-            .mapToDouble(d -> d.getQuantity() *
-                (d.getUnitCost() != null ? d.getUnitCost().doubleValue() : 0))
-            .sum();
+                .mapToDouble(d -> d.getQuantity() *
+                        (d.getUnitCost() != null ? d.getUnitCost().doubleValue() : 0))
+                .sum();
 
         String supplierName = detalles.stream()
-            .filter(d -> d.getLot() != null && d.getLot().getSupplier() != null)
-            .map(d -> d.getLot().getSupplier().getName())
-            .findFirst()
-            .orElse("—");
+                .filter(d -> d.getLot() != null && d.getLot().getSupplier() != null)
+                .map(d -> d.getLot().getSupplier().getName())
+                .findFirst()
+                .orElse(BusinessUtils.DEFAULT_VALUE);
 
-        List<Map<String, String>> detallesMap = detalles.stream().map(d -> {
-            Map<String, String> det = new HashMap<>();
-            det.put("idDetail", d.getIdDetail());
-            det.put("productName", d.getProduct() != null ? d.getProduct().getName() : "—");
-            det.put("lotCode", d.getLot() != null ? d.getLot().getCode() : "—");
-            det.put("expirationDate", d.getLot() != null && d.getLot().getExpirationDate() != null
-                ? d.getLot().getExpirationDate().toString() : "—");
-            det.put("quantity", String.valueOf(d.getQuantity()));
-            det.put("unitCost", d.getUnitCost() != null ? d.getUnitCost().toString() : "0");
-            det.put("subtotal", String.valueOf(
-                d.getQuantity() * (d.getUnitCost() != null ? d.getUnitCost().doubleValue() : 0)));
-            return det;
-        }).collect(Collectors.toList());
+        List<Map<String, String>> detallesMap = detalles.stream()
+                .map(this::mapToPurchaseDetailMap)
+                .toList();
 
         Map<String, Object> data = new HashMap<>();
-        data.put("idMovement", m.getIdMovement());
-        data.put("movementDate", m.getMovementDate().toString());
-        data.put("observation", m.getObservation() != null ? m.getObservation() : "");
-        data.put("userName", m.getUser() != null
-            ? m.getUser().getFirstName() + " " + m.getUser().getSurName() : "—");
-        data.put("supplierName", supplierName);
-        data.put("totalUnidades", totalUnidades);
-        data.put("costoTotal", costoTotal);
-        data.put("detalles", detallesMap);
+        data.put(BusinessUtils.KEY_ID_MOVEMENT, m.getIdMovement());
+        data.put(BusinessUtils.KEY_MOVEMENT_DATE, m.getMovementDate().toString());
+        data.put(BusinessUtils.KEY_OBSERVATION, BusinessUtils.getValueOrDefault(m.getObservation()));
+        data.put(BusinessUtils.KEY_USER_NAME, BusinessUtils.buildFullName(m.getUser()));
+        data.put(BusinessUtils.KEY_SUPPLIER_NAME, supplierName);
+        data.put(BusinessUtils.KEY_TOTAL_UNIDADES, totalUnidades);
+        data.put(BusinessUtils.KEY_COSTO_TOTAL, costoTotal);
+        data.put(BusinessUtils.KEY_DETALLES, detallesMap);
 
         return data;
     }
-    
+
+    private Map<String, String> mapToPurchaseDetailMap(EntityInventoryMovementDetail d) {
+        Map<String, String> det = new HashMap<>();
+        det.put(BusinessUtils.KEY_ID_DETAIL, d.getIdDetail());
+        det.put(BusinessUtils.KEY_PRODUCT_NAME, BusinessUtils.getProductName(d.getProduct()));
+        det.put(BusinessUtils.KEY_LOT_CODE, BusinessUtils.getLotCode(d.getLot()));
+        det.put(BusinessUtils.KEY_EXPIRATION_DATE, BusinessUtils.getLotExpirationDate(d.getLot()));
+        det.put(BusinessUtils.KEY_QUANTITY, String.valueOf(d.getQuantity()));
+        det.put(BusinessUtils.KEY_UNIT_COST, BusinessUtils.formatBigDecimal(d.getUnitCost()));
+        det.put(BusinessUtils.KEY_SUBTOTAL, String.valueOf(
+                d.getQuantity() * (d.getUnitCost() != null ? d.getUnitCost().doubleValue() : 0)));
+        return det;
+    }
+
     public ResponsePurchaseRecent getRecent(int limit) {
         ResponsePurchaseRecent response = new ResponsePurchaseRecent();
 
         List<EntityInventoryMovement> movimientos = repositoryMovement
-            .findByTypeOrderByMovementDateDesc("Entrada")
-            .stream()
-            .limit(limit)
-            .collect(Collectors.toList());
+                .findByTypeOrderByMovementDateDesc(BusinessUtils.TYPE_ENTRADA)
+                .stream()
+                .limit(limit)
+                .toList();
 
         List<Map<String, Object>> items = movimientos.stream()
-            .map(m -> {
-                List<EntityInventoryMovementDetail> detalles =
-                    repositoryMovementDetail.findByMovement_IdMovement(m.getIdMovement());
+                .map(m -> {
+                    List<EntityInventoryMovementDetail> detalles = repositoryMovementDetail
+                            .findByMovement_IdMovement(m.getIdMovement());
 
-                double costoTotal = detalles.stream()
-                    .mapToDouble(d -> d.getQuantity() *
-                        (d.getUnitCost() != null ? d.getUnitCost().doubleValue() : 0))
-                    .sum();
+                    double costoTotal = detalles.stream()
+                            .mapToDouble(d -> d.getQuantity() *
+                                    (d.getUnitCost() != null ? d.getUnitCost().doubleValue() : 0))
+                            .sum();
 
-                String supplierName = detalles.stream()
-                    .filter(d -> d.getLot() != null && d.getLot().getSupplier() != null)
-                    .map(d -> d.getLot().getSupplier().getName())
-                    .findFirst()
-                    .orElse("—");
+                    String supplierName = detalles.stream()
+                            .filter(d -> d.getLot() != null && d.getLot().getSupplier() != null)
+                            .map(d -> d.getLot().getSupplier().getName())
+                            .findFirst()
+                            .orElse(BusinessUtils.DEFAULT_VALUE);
 
-                Map<String, Object> data = new HashMap<>();
-                data.put("supplierName", supplierName);
-                data.put("costoTotal", costoTotal);
-                data.put("totalItems", detalles.size());
-                data.put("movementDate", m.getMovementDate().toString());
-                return data;
-            })
-            .collect(Collectors.toList());
+                    Map<String, Object> data = new HashMap<>();
+                    data.put(BusinessUtils.KEY_SUPPLIER_NAME, supplierName);
+                    data.put(BusinessUtils.KEY_COSTO_TOTAL, costoTotal);
+                    data.put("totalItems", detalles.size());
+                    data.put(BusinessUtils.KEY_MOVEMENT_DATE, m.getMovementDate().toString());
+                    return data;
+                })
+                .toList();
 
         response.setListPurchases(items);
         response.success();
         return response;
     }
-    
+
     public ResponsePurchaseReport getReport(String from, String to) {
         ResponsePurchaseReport response = new ResponsePurchaseReport();
 
         try {
-            Date fechaFrom = parseDate(from, false);
-            Date fechaTo = parseDate(to, true);
+            Date fechaFrom = BusinessUtils.parseDate(from, false);
+            Date fechaTo = BusinessUtils.parseDate(to, true);
 
-            List<EntityInventoryMovement> compras = repositoryMovement.findByType("Entrada")
+            List<EntityInventoryMovement> compras = repositoryMovement.findByType(BusinessUtils.TYPE_ENTRADA)
                     .stream()
                     .filter(m -> m.getMovementDate() != null
                             && !m.getMovementDate().before(fechaFrom)
                             && !m.getMovementDate().after(fechaTo))
-                    .sorted((a, b) -> a.getMovementDate().compareTo(b.getMovementDate()))
-                    .collect(Collectors.toList());
+                    .sorted(Comparator.comparing(EntityInventoryMovement::getMovementDate))
+                    .toList();
 
             double inversionTotal = 0;
 
@@ -153,8 +150,8 @@ public class BusinessPurchase {
 
             for (EntityInventoryMovement m : compras) {
 
-                List<EntityInventoryMovementDetail> detalles =
-                        repositoryMovementDetail.findByMovement_IdMovement(m.getIdMovement());
+                List<EntityInventoryMovementDetail> detalles = repositoryMovementDetail
+                        .findByMovement_IdMovement(m.getIdMovement());
 
                 int totalUnidades = detalles.stream()
                         .mapToInt(EntityInventoryMovementDetail::getQuantity)
@@ -171,34 +168,32 @@ public class BusinessPurchase {
                         .filter(d -> d.getLot() != null && d.getLot().getSupplier() != null)
                         .map(d -> d.getLot().getSupplier().getName())
                         .findFirst()
-                        .orElse("—");
+                        .orElse(BusinessUtils.DEFAULT_VALUE);
 
                 Map<String, Object> data = new HashMap<>();
-                data.put("idMovement", m.getIdMovement());
-                data.put("movementDate", m.getMovementDate().toString());
-                data.put("supplierName", supplierName);
-                data.put("userName", m.getUser() != null
-                        ? m.getUser().getFirstName() + " " + m.getUser().getSurName()
-                        : "—");
-                data.put("totalUnidades", totalUnidades);
-                data.put("costoTotal", costoTotal);
+                data.put(BusinessUtils.KEY_ID_MOVEMENT, m.getIdMovement());
+                data.put(BusinessUtils.KEY_MOVEMENT_DATE, m.getMovementDate().toString());
+                data.put(BusinessUtils.KEY_SUPPLIER_NAME, supplierName);
+                data.put(BusinessUtils.KEY_USER_NAME, BusinessUtils.buildFullName(m.getUser()));
+                data.put(BusinessUtils.KEY_TOTAL_UNIDADES, totalUnidades);
+                data.put(BusinessUtils.KEY_COSTO_TOTAL, costoTotal);
 
                 detalle.add(data);
             }
 
             Map<String, Object> resumen = new HashMap<>();
-            resumen.put("totalCompras", compras.size());
-            resumen.put("totalUnidades", detalle.stream()
-                    .mapToInt(d -> (int) d.get("totalUnidades"))
+            resumen.put(BusinessUtils.KEY_TOTAL_COMPRAS, compras.size());
+            resumen.put(BusinessUtils.KEY_TOTAL_UNIDADES, detalle.stream()
+                    .mapToInt(d -> (int) d.get(BusinessUtils.KEY_TOTAL_UNIDADES))
                     .sum());
-            resumen.put("inversionTotal", inversionTotal);
+            resumen.put(BusinessUtils.KEY_INVERSION_TOTAL, inversionTotal);
 
             response.setResumen(resumen);
             response.setDetalle(detalle);
             response.success();
 
-        } catch (Exception e) {
-            response.listMessage.add("Error al generar reporte: " + e.getMessage());
+        } catch (RuntimeException e) {
+            handleReportException(response, e);
         }
 
         return response;
@@ -208,100 +203,78 @@ public class BusinessPurchase {
         ResponsePurchaseReport response = new ResponsePurchaseReport();
 
         try {
-            Date fechaFrom = parseDate(from, false);
-            Date fechaTo = parseDate(to, true);
+            Date fechaFrom = BusinessUtils.parseDate(from, false);
+            Date fechaTo = BusinessUtils.parseDate(to, true);
 
-            List<EntityInventoryMovement> compras = repositoryMovement.findByType("Entrada")
+            List<EntityInventoryMovement> compras = repositoryMovement.findByType(BusinessUtils.TYPE_ENTRADA)
                     .stream()
                     .filter(m -> m.getMovementDate() != null
                             && !m.getMovementDate().before(fechaFrom)
                             && !m.getMovementDate().after(fechaTo))
-                    .collect(Collectors.toList());
+                    .toList();
 
             Map<String, Map<String, Object>> porProveedor = new LinkedHashMap<>();
 
-            for (EntityInventoryMovement m : compras) {
-
-                List<EntityInventoryMovementDetail> detalles =
-                        repositoryMovementDetail.findByMovement_IdMovement(m.getIdMovement());
-
-                for (EntityInventoryMovementDetail d : detalles) {
-
-                    String idSupplier = d.getLot() != null && d.getLot().getSupplier() != null
-                            ? d.getLot().getSupplier().getIdSupplier()
-                            : "sin-proveedor";
-
-                    String supplierName = d.getLot() != null && d.getLot().getSupplier() != null
-                            ? d.getLot().getSupplier().getName()
-                            : "Sin proveedor";
-
-                    porProveedor.computeIfAbsent(idSupplier, k -> {
-                        Map<String, Object> map = new HashMap<>();
-                        map.put("idSupplier", idSupplier);
-                        map.put("supplierName", supplierName);
-                        map.put("totalCompras", 0);
-                        map.put("totalUnidades", 0);
-                        map.put("inversionTotal", 0.0);
-                        return map;
-                    });
-
-                    Map<String, Object> proveedor = porProveedor.get(idSupplier);
-
-                    proveedor.put("totalCompras", (int) proveedor.get("totalCompras") + 1);
-                    proveedor.put("totalUnidades",
-                            (int) proveedor.get("totalUnidades") + d.getQuantity());
-
-                    proveedor.put("inversionTotal",
-                            (double) proveedor.get("inversionTotal")
-                                    + d.getQuantity()
-                                    * (d.getUnitCost() != null ? d.getUnitCost().doubleValue() : 0));
-                }
-            }
+            compras.forEach(m -> processMovementDetails(m, porProveedor));
 
             List<Map<String, Object>> detalle = new ArrayList<>(porProveedor.values());
-
             detalle.sort((a, b) -> Double.compare(
-                    (double) b.get("inversionTotal"),
-                    (double) a.get("inversionTotal")));
+                    (double) b.get(BusinessUtils.KEY_INVERSION_TOTAL),
+                    (double) a.get(BusinessUtils.KEY_INVERSION_TOTAL)));
 
             double inversionTotal = detalle.stream()
-                    .mapToDouble(d -> (double) d.get("inversionTotal"))
+                    .mapToDouble(d -> (double) d.get(BusinessUtils.KEY_INVERSION_TOTAL))
                     .sum();
 
             Map<String, Object> resumen = new HashMap<>();
             resumen.put("totalProveedores", detalle.size());
-            resumen.put("totalCompras", compras.size());
-            resumen.put("inversionTotal", inversionTotal);
+            resumen.put(BusinessUtils.KEY_TOTAL_COMPRAS, compras.size());
+            resumen.put(BusinessUtils.KEY_INVERSION_TOTAL, inversionTotal);
 
             response.setResumen(resumen);
             response.setDetalle(detalle);
             response.success();
 
-        } catch (Exception e) {
-            response.listMessage.add("Error al generar reporte: " + e.getMessage());
+        } catch (RuntimeException e) {
+            handleReportException(response, e);
         }
 
         return response;
     }
 
-    private Date parseDate(String dateStr, boolean endOfDay) {
-        try {
-            java.text.SimpleDateFormat sdf = new java.text.SimpleDateFormat("yyyy-MM-dd");
-            Date date = sdf.parse(dateStr);
+    private void processMovementDetails(EntityInventoryMovement m, Map<String, Map<String, Object>> porProveedor) {
+        List<EntityInventoryMovementDetail> detalles = repositoryMovementDetail
+                .findByMovement_IdMovement(m.getIdMovement());
 
-            if (endOfDay) {
-                Calendar cal = Calendar.getInstance();
-                cal.setTime(date);
-                cal.set(Calendar.HOUR_OF_DAY, 23);
-                cal.set(Calendar.MINUTE, 59);
-                cal.set(Calendar.SECOND, 59);
-                return cal.getTime();
-            }
-
-            return date;
-
-        } catch (Exception e) {
-            return endOfDay ? new Date() : new Date(0);
+        for (EntityInventoryMovementDetail d : detalles) {
+            updateSupplierMap(d, porProveedor);
         }
+    }
+
+    private void updateSupplierMap(EntityInventoryMovementDetail d, Map<String, Map<String, Object>> porProveedor) {
+        boolean hasSupplier = d.getLot() != null && d.getLot().getSupplier() != null;
+        String idSupplier = hasSupplier ? d.getLot().getSupplier().getIdSupplier() : BusinessUtils.SIN_ID + "proveedor";
+        String supplierName = hasSupplier ? d.getLot().getSupplier().getName() : "Sin proveedor";
+
+        Map<String, Object> proveedor = porProveedor.computeIfAbsent(idSupplier, k -> {
+            Map<String, Object> map = new HashMap<>();
+            map.put("idSupplier", idSupplier);
+            map.put(BusinessUtils.KEY_SUPPLIER_NAME, supplierName);
+            map.put(BusinessUtils.KEY_TOTAL_COMPRAS, 0);
+            map.put(BusinessUtils.KEY_TOTAL_UNIDADES, 0);
+            map.put(BusinessUtils.KEY_INVERSION_TOTAL, 0.0);
+            return map;
+        });
+
+        double unitCost = d.getUnitCost() != null ? d.getUnitCost().doubleValue() : 0.0;
+        double subtotal = d.getQuantity() * unitCost;
+
+        proveedor.put(BusinessUtils.KEY_TOTAL_COMPRAS, (int) proveedor.get(BusinessUtils.KEY_TOTAL_COMPRAS) + 1);
+        proveedor.put(BusinessUtils.KEY_TOTAL_UNIDADES, (int) proveedor.get(BusinessUtils.KEY_TOTAL_UNIDADES) + d.getQuantity());
+        proveedor.put(BusinessUtils.KEY_INVERSION_TOTAL, (double) proveedor.get(BusinessUtils.KEY_INVERSION_TOTAL) + subtotal);
+    }
+
+    private static void handleReportException(ResponsePurchaseReport response, RuntimeException e) {
+        response.listMessage.add(BusinessUtils.buildReportErrorMessage(e));
     }
 }
