@@ -6,7 +6,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -21,6 +20,27 @@ import com.epiis.apirfbvc.repository.RepositorySupplier;
 @Service
 public class BusinessSupplier {
 
+    private static final String STATUS_ACTIVO = "activo";
+    private static final String EMPTY = "";
+
+    private static final String KEY_ID_SUPPLIER = "idSupplier";
+    private static final String KEY_NAME = "name";
+    private static final String KEY_RUC = "ruc";
+    private static final String KEY_PHONE = "phone";
+    private static final String KEY_ADDRESS = "address";
+    private static final String KEY_EMAIL = "email";
+    private static final String KEY_STATUS = "status";
+    private static final String KEY_CREATED_AT = "createdAt";
+
+    private static final String MSG_YA_EXISTE_RUC = "Ya existe un proveedor con ese RUC.";
+    private static final String MSG_REGISTRADO = "Proveedor registrado correctamente.";
+    private static final String MSG_ID_OBLIGATORIO = "El id del proveedor es obligatorio.";
+    private static final String MSG_NO_ENCONTRADO = "Proveedor no encontrado.";
+    private static final String MSG_ACTUALIZADO = "Proveedor actualizado correctamente.";
+    private static final String MSG_ESTADO_ACTUALIZADO = "Estado del proveedor actualizado a '%s' correctamente.";
+    private static final String MSG_PROVEEDOR_NO_ENCONTRADO_ID = "No se encontró el proveedor con el ID proporcionado.";
+    private static final String MSG_ERROR_ESTADO = "Error al actualizar el estado: ";
+
     private final RepositorySupplier repositorySupplier;
 
     public BusinessSupplier(RepositorySupplier repositorySupplier) {
@@ -29,10 +49,10 @@ public class BusinessSupplier {
 
     public ResponseSupplierGetAll getAll() {
         ResponseSupplierGetAll response = new ResponseSupplierGetAll();
-        List<EntitySupplier> list = repositorySupplier.findAll();
-        List<Map<String, String>> items = list.stream()
-            .map(this::toMap)
-            .collect(Collectors.toList());
+        List<Map<String, String>> items = repositorySupplier.findAll()
+                .stream()
+                .map(this::toMap)
+                .toList();
         response.setListSuppliers(items);
         response.success();
         return response;
@@ -41,13 +61,76 @@ public class BusinessSupplier {
     public ResponseSupplierInsert insert(RequestSupplierInsert request) {
         ResponseSupplierInsert response = new ResponseSupplierInsert();
 
-        if (request.getRuc() != null && !request.getRuc().isBlank()) {
-            if (repositorySupplier.existsByRuc(request.getRuc())) {
-                response.listMessage.add("Ya existe un proveedor con ese RUC.");
-                return response;
-            }
+        if (hasRuc(request.getRuc()) && repositorySupplier.existsByRuc(request.getRuc())) {
+            response.listMessage.add(MSG_YA_EXISTE_RUC);
+            return response;
         }
 
+        EntitySupplier supplier = buildSupplier(request);
+        repositorySupplier.save(supplier);
+
+        response.success();
+        response.listMessage.add(MSG_REGISTRADO);
+        return response;
+    }
+
+    public ResponseSupplierUpdate update(RequestSupplierUpdate request) {
+        ResponseSupplierUpdate response = new ResponseSupplierUpdate();
+
+        if (isBlank(request.getIdSupplier())) {
+            response.listMessage.add(MSG_ID_OBLIGATORIO);
+            return response;
+        }
+
+        EntitySupplier supplier = repositorySupplier.findById(request.getIdSupplier()).orElse(null);
+        if (supplier == null) {
+            response.listMessage.add(MSG_NO_ENCONTRADO);
+            return response;
+        }
+
+        if (hasRuc(request.getRuc())
+                && repositorySupplier.existsByRucAndIdSupplierNot(request.getRuc(), request.getIdSupplier())) {
+            response.listMessage.add(MSG_YA_EXISTE_RUC);
+            return response;
+        }
+
+        updateEntity(supplier, request);
+        repositorySupplier.save(supplier);
+
+        response.success();
+        response.listMessage.add(MSG_ACTUALIZADO);
+        return response;
+    }
+
+    public ResponseSupplierInsert toggleStatus(String id, String newStatus) {
+        ResponseSupplierInsert response = new ResponseSupplierInsert();
+        try {
+            String safeId = id != null ? id : EMPTY;
+            String safeStatus = newStatus != null ? newStatus.toLowerCase() : STATUS_ACTIVO;
+
+            Optional<EntitySupplier> optionalSupplier = repositorySupplier.findById(safeId);
+
+            if (optionalSupplier.isPresent()) {
+                EntitySupplier supplier = optionalSupplier.get();
+                supplier.setStatus(safeStatus);
+                supplier.setUpdatedAt(new java.sql.Date(new Date().getTime()));
+                repositorySupplier.save(supplier);
+
+                response.success();
+                response.listMessage.add(String.format(MSG_ESTADO_ACTUALIZADO, safeStatus));
+            } else {
+                response.error();
+                response.listMessage.add(MSG_PROVEEDOR_NO_ENCONTRADO_ID);
+            }
+        } catch (Exception e) {
+            response.exception();
+            response.listMessage.add(MSG_ERROR_ESTADO + e.getMessage());
+        }
+
+        return response;
+    }
+
+    private EntitySupplier buildSupplier(RequestSupplierInsert request) {
         EntitySupplier supplier = new EntitySupplier();
         supplier.setIdSupplier(UUID.randomUUID().toString());
         supplier.setName(request.getName());
@@ -55,94 +138,43 @@ public class BusinessSupplier {
         supplier.setPhone(request.getPhone());
         supplier.setAddress(request.getAddress());
         supplier.setEmail(request.getEmail());
-        supplier.setStatus("activo");
+        supplier.setStatus(STATUS_ACTIVO);
         supplier.setCreatedAt(new java.sql.Date(new Date().getTime()));
         supplier.setUpdatedAt(supplier.getCreatedAt());
-
-        repositorySupplier.save(supplier);
-        response.success();
-        response.listMessage.add("Proveedor registrado correctamente.");
-        return response;
+        return supplier;
     }
 
-    public ResponseSupplierUpdate update(RequestSupplierUpdate request) {
-        ResponseSupplierUpdate response = new ResponseSupplierUpdate();
-
-        String idSupplier = request.getIdSupplier();
-
-        if (idSupplier == null || idSupplier.isBlank()) {
-            response.listMessage.add("El id del proveedor es obligatorio.");
-            return response;
-        }
-
-        EntitySupplier supplier = repositorySupplier.findById(idSupplier)
-                .orElse(null);
-
-        if (supplier == null) {
-            response.listMessage.add("Proveedor no encontrado.");
-            return response;
-        }
-        
-        if (request.getRuc() != null && !request.getRuc().isBlank()) {
-            if (repositorySupplier.existsByRucAndIdSupplierNot(request.getRuc(), request.getIdSupplier())) {
-                response.listMessage.add("Ya existe un proveedor con ese RUC.");
-                return response;
-            }
-        }
-
+    private void updateEntity(EntitySupplier supplier, RequestSupplierUpdate request) {
         supplier.setName(request.getName());
         supplier.setRuc(request.getRuc());
         supplier.setPhone(request.getPhone());
         supplier.setAddress(request.getAddress());
         supplier.setEmail(request.getEmail());
         supplier.setUpdatedAt(new java.sql.Date(new Date().getTime()));
-
-        repositorySupplier.save(supplier);
-        response.success();
-        response.listMessage.add("Proveedor actualizado correctamente.");
-        return response;
     }
 
-    public ResponseSupplierInsert toggleStatus(String id, String newStatus) {
-    	ResponseSupplierInsert response = new ResponseSupplierInsert();
-	    try {
-	    	String safeId = id != null ? id : "";
-	        String safeStatus = newStatus != null ? newStatus.toLowerCase() : "activo";
-	        
-	        Optional<EntitySupplier> optionalUser = repositorySupplier.findById(safeId);
-	        
-	        if (optionalUser.isPresent()) {
-	            EntitySupplier user = optionalUser.get();
-	            
-	            user.setStatus(safeStatus);
-	            user.setUpdatedAt(new java.sql.Date(new java.util.Date().getTime()));
-	            
-	            repositorySupplier.save(user);
-	            
-	            response.success();
-	            response.listMessage.add("Estado del proveedor actualizado a '" + safeStatus + "' correctamente.");
-	        } else {
-	            response.error();
-	            response.listMessage.add("No se encontró el proveedor con el ID proporcionado.");
-	        }
-	    } catch (Exception e) {
-	        response.exception();
-	        response.listMessage.add("Error al actualizar el estado: " + e.getMessage());
-	    }
-	    
-	    return response;
+    private boolean hasRuc(String ruc) {
+        return ruc != null && !ruc.isBlank();
+    }
+
+    private boolean isBlank(String value) {
+        return value == null || value.isBlank();
     }
 
     private Map<String, String> toMap(EntitySupplier s) {
         Map<String, String> data = new HashMap<>();
-        data.put("idSupplier", s.getIdSupplier());
-        data.put("name", s.getName());
-        data.put("ruc", s.getRuc() != null ? s.getRuc() : "");
-        data.put("phone", s.getPhone() != null ? s.getPhone() : "");
-        data.put("address", s.getAddress() != null ? s.getAddress() : "");
-        data.put("email", s.getEmail() != null ? s.getEmail() : "");
-        data.put("status", s.getStatus());
-        data.put("createdAt", s.getCreatedAt() != null ? s.getCreatedAt().toString() : "");
+        data.put(KEY_ID_SUPPLIER, s.getIdSupplier());
+        data.put(KEY_NAME, s.getName());
+        data.put(KEY_RUC, defaultString(s.getRuc()));
+        data.put(KEY_PHONE, defaultString(s.getPhone()));
+        data.put(KEY_ADDRESS, defaultString(s.getAddress()));
+        data.put(KEY_EMAIL, defaultString(s.getEmail()));
+        data.put(KEY_STATUS, s.getStatus());
+        data.put(KEY_CREATED_AT, s.getCreatedAt() != null ? s.getCreatedAt().toString() : EMPTY);
         return data;
+    }
+
+    private String defaultString(String value) {
+        return value != null ? value : EMPTY;
     }
 }
